--- a/scripts/view/dashboard/tasks/mode_gantt.html
+++ b/scripts/view/dashboard/tasks/mode_gantt.html
@@ -5,7 +5,9 @@
         <span class="bg-dark text-white p-1">测试中</span><span class="bg-primary text-white px-2 py-1 mr-2">{{summary.testing}}</span>
         <span class="bg-dark text-white p-1">已完成</span><span class="bg-success text-white px-2 py-1 mr-2">{{summary.finished}}</span>
     </small>
-    <p style="margin: 10px 0 4px 0; font-size: .4em;">任务的状态看颜色，有<i class="fa fa-exclamation-circle text-danger mx-1"></i>的表明该任务已经 <b>滞后了</b></p>
+    <p style="margin: 10px 0 4px 0; font-size: .4em;">
+        <i class="fa fa-exclamation-circle text-danger mx-1"></i>滞后了<i class="fa fa-square text-warning ml-2 mr-1"></i>节假日
+    </p>
 
     <div id="gantt-view"></div>
 </div>
@@ -13,6 +15,7 @@
 <script type='text/javascript'>
 $('#gantt-view').ganttView({
     data: $.parseJSON('{*gantt_data*}'),
+    holidays: $.parseJSON('{*holidays*}'),
     showWeekends: true,
     vtHeaderWidth: 480,
     behavior: {
