--- a/scripts/view/layout_base.html
+++ b/scripts/view/layout_base.html
@@ -7,18 +7,20 @@
 		
 		<link rel="stylesheet" href="/www/css/bootstrap.min.css">
 		<link rel="stylesheet" href="/www/css/bootstrap.editor.min.css">
-		<link rel="stylesheet" href="/www/css/jquery.datetimepicker.css">
+		<link rel="stylesheet" href="/www/css/bootstrap-year-calendar.min.css">
+		<link rel="stylesheet" href="/www/css/bootstrap-datepicker.min.css">
 		<link rel="stylesheet" href="/www/css/jquery.gantt.min.css">
 		<link rel="stylesheet" href="/www/css/jstree.min.css">
 		<link rel="stylesheet" href="/www/css/fontawesome.min.css">
 		<link rel="stylesheet" href="/www/css/site.css">
 
 		<script src="/www/js/jquery.min.js"></script>
-		<script src="/www/js/jquery.datetimepicker.min.js"></script>
 		<script src="/www/js/jquery.gantt.min.js"></script>
 		<script src="/www/js/jstree.min.js"></script>
 		<script src="/www/js/bootstrap.min.js"></script>
+		<script src="/www/js/bootstrap-datepicker.min.js"></script>
 		<script src="/www/js/bootstrap.editor.min.js"></script>
+		<script src="/www/js/bootstrap-year-calendar.js"></script>
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-sm sticky-top navbar-dark bg-dark p-0">
