update jquery.gantt for holidays

--- a/scripts/view/dashboard/tasks/mode_gantt.html
+++ b/scripts/view/dashboard/tasks/mode_gantt.html
@@ -6,7 +6,7 @@
         <span class="bg-dark text-white p-1">已完成</span><span class="bg-success text-white px-2 py-1 mr-2">{{summary.finished}}</span>
     </small>
     <p style="margin: 10px 0 4px 0; font-size: .4em;">
-        <i class="fa fa-exclamation-circle text-danger mx-1"></i>滞后了<i class="fa fa-square text-warning ml-2 mr-1"></i>节假日
+        <i class="fa fa-exclamation-circle text-danger mx-1"></i>滞后了<i class="fa fa-square ml-2 mr-1" style="color: rgba(140, 136, 136, .25)"></i>节假日
     </p>
 
     <div id="gantt-view"></div>
