--- a/scripts/view/user/notification/index.html
+++ b/scripts/view/user/notification/index.html
@@ -36,7 +36,7 @@
 <script>
 function refresh_notifications() {
     get_notification_count();
-    navbar_popup('/user/notification/', 400);
+    navbar_popup('/user/notification/', 400, true);
 }
 
 function read_notification(id) {
