--- a/scripts/view/dashboard/tasks/task_info.html
+++ b/scripts/view/dashboard/tasks/task_info.html
@@ -7,7 +7,7 @@
     <div class="d-flex">
         <div class="dropdown">
             <div class="btn-link px-2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <h4>
+                <h4 class="text-truncate" style="max-width: 580px;">
                     {{task.info.name}}
                 </h4>
             </div>
