--- a/scripts/view/layout_base.html
+++ b/scripts/view/layout_base.html
@@ -15,6 +15,7 @@
 		<link rel="stylesheet" href="/www/css/site.css">
 
 		<script src="/www/js/jquery.min.js"></script>
+		<script src="/www/js/js.cookie.min.js"></script>
 		<script src="/www/js/jquery.gantt.min.js"></script>
 		<script src="/www/js/jstree.min.js"></script>
 		<script src="/www/js/bootstrap.min.js"></script>
