--- a/scripts/view/dashboard/tasks/create_task.html
+++ b/scripts/view/dashboard/tasks/create_task.html
@@ -11,7 +11,7 @@
                     
             <div class="form-group col-md-4 col-lg-3">
                 <label for="pid">选择项目<b class="text-danger ml-2">*</b></label>
-                <select id="pid" name="pid" class="form-control">
+                <select id="pid" name="pid" class="form-control" onchange="return get_members_of_proj($(this).val());">
                     {% for _, info in ipairs(projs) do %}
                     <option value="{{info.id}}">{{info.name}}</option>
                     {% end %}
@@ -31,13 +31,13 @@
         <div class="form-row">
             <div class="form-group col-md-3">
                 <label for="assigned">指派成员<b class="text-danger ml-2">*</b></label>
-                <select id="assigned" name="assigned" class="form-control">
+                <select id="assigned" name="assigned" class="form-control" onchange='return record_last_select(this, "recent_assigned");'>
                 </select>
             </div>
 
             <div class="form-group col-md-3">
                 <label for="cooperator">协作者/测试人员<b class="text-danger ml-2">*</b></label>
-                <select id="cooperator" name="cooperator" class="form-control">
+                <select id="cooperator" name="cooperator" class="form-control" onchange='return record_last_select(this, "recent_cooperator");'>
                 </select>
             </div>
         </div>
@@ -45,12 +45,12 @@
         <div class="form-row">
             <div class="form-group col-md-3">
                 <label for="start-time">计划开始时间<b class="text-danger ml-2">*</b></label>
-                <input type="text" class="form-control form-datetime" id="start-time" name="start_time" value="{{os.date('%F')}}" required>
+                <input type="text" class="form-control form-datetime" id="start-time" name="start_time" value="{{os.date('%F', os.time() + 24 * 3600)}}" required>
             </div>
 
             <div class="form-group col-md-3">
                 <label for="end-time">计划结束时间<b class="text-danger ml-2">*</b></label>
-                <input type="text" class="form-control form-datetime" id="end-time" name="end_time" value="{{os.date('%F')}}" required>
+                <input type="text" class="form-control form-datetime" id="end-time" name="end_time" value="{{os.date('%F', os.time() + 24 * 3600)}}" required>
             </div> 
         </div>
 
@@ -94,19 +94,61 @@ $('#form-create-task .form-datetime').datepicker({
 
 $('#form-create-task #content').markdown();
 
+function record_last_select(elem, key) {
+    var recent = Cookies.getJSON(key);
+    var val = parseInt($(elem).val());
+
+    if(!recent || recent.length == 0) {
+        recent = [val];
+    } else {
+        recent.splice(0, 0, val);
+        $.unique(recent);
+        if (recent.length > 3) recent.pop();
+    }
+
+    Cookies.set(key, recent, { expires: 365 });
+}
+
 function get_members_of_proj(pid) {
     $('#form-create-task #assigned').empty();
     $('#form-create-task #cooperator').empty();
+
     $.post('/dashboard/tasks/members_of_proj', {pid: pid}, function(ret) {
+        var valid_assigned = $('<optgroup>', { label : "可指派人员" });
+        var valid_cooperator = $('<optgroup>', { label : "可选人员" });
+
         $.each(ret, function(_, info) {
-            if (info.role == 3) $('#form-create-task #assigned').append('<option value="' + info.uid + '">【' + info.user_role + '】' + info.user + '</option>');
-            if (info.role == 4) $('#form-create-task #cooperator').append('<option value="' + info.uid + '">【' + info.user_role + '】' + info.user + '</option>');
+            var opt = $('<option>', { value: info.uid }).text('【' + info.user_role + '】' + info.user);
+            if (info.role == 3) valid_assigned.append(opt);
+            if (info.role == 4) valid_cooperator.append(opt.clone());
         });
 
-        $.each(ret, function(_, info) {            
-            if (info.role != 3) $('#form-create-task #assigned').append('<option value="' + info.uid + '">【' + info.user_role + '】' + info.user + '</option>');
-            if (info.role != 4) $('#form-create-task #cooperator').append('<option value="' + info.uid + '">【' + info.user_role + '】' + info.user + '</option>');
-        });        
+        $.each(ret, function(_, info) {
+            var opt = $('<option>', { value: info.uid }).text('【' + info.user_role + '】' + info.user);
+            if (info.role != 3) valid_assigned.append(opt);
+            if (info.role != 4) valid_cooperator.append(opt.clone());
+        });
+
+        $('#form-create-task #assigned').append(valid_assigned);
+        $('#form-create-task #cooperator').append(valid_cooperator);
+
+        var recent = Cookies.getJSON('recent_assigned');
+        if(recent) {            
+            var recent_assigend = $('<optgroup>', { label : "最近选择" });
+            $.each(recent, function(_, id) {
+                $('option[value="' + id + '"]', valid_assigned).appendTo(recent_assigend);
+            });
+            recent_assigend.insertBefore(valid_assigned);
+        }
+
+        recent = Cookies.getJSON('recent_cooperator');
+        if(recent) {            
+            var recent_cooperator = $('<optgroup>', { label : "最近选择" });
+            $.each(recent, function(_, id) {
+                $('option[value="' + id + '"]', valid_cooperator).appendTo(recent_cooperator);
+            });
+            recent_cooperator.insertBefore(valid_cooperator);
+        }            
     }, 'json');
 }
 
@@ -140,10 +182,6 @@ function quit_create() {
     last_filter_menu.click();
     $('input[type="file"]').remove();
 }
-
-$('#form-create-task #pid').change(function() {
-    get_members_of_proj($('#form-create-task #pid').val());
-})
 
 $(document).ready(function() {
     get_members_of_proj($('#form-create-task #pid').val());
