--- a/scripts/view/dashboard/tasks/task_info_readonly.html
+++ b/scripts/view/dashboard/tasks/task_info_readonly.html
@@ -3,17 +3,16 @@
 <div class="px-2 my-2" style="margin-left: 24px;">
 
     <!-- 标题 -->
-    <div class="d-table">
-        <h4>
-            {{task.info.name}}
-            {% if #task.info.tags > 0 then %}
-            <small class="ml-2 mt-1" style="font-size: 12px; vertical-align: middle;">
-                {% for _, tag in ipairs(task.info.tags) do %}
-                <span class="badge {{tags[tag].color}} mr-1">{{tags[tag].title}}</span>
-                {% end %}
-            </small>
+    <div class="d-flex">
+        <h4 class="text-truncate" style="max-width: 580px">{{task.info.name}}</h4>
+
+        {% if #task.info.tags > 0 then %}
+        <small class="ml-2 mt-1" style="font-size: 12px; vertical-align: middle;">
+            {% for _, tag in ipairs(task.info.tags) do %}
+            <span class="badge {{tags[tag].color}} mr-1">{{tags[tag].title}}</span>
             {% end %}
-        </h4>
+        </small>
+        {% end %}
     </div>
     
     {% if enable_archive and task.info.status == 4 then %}
