--- a/scripts/view/dashboard/tasks/view_tasks.html
+++ b/scripts/view/dashboard/tasks/view_tasks.html
@@ -1,10 +1,27 @@
 <div class="m-2">
 
     <div class="d-block mt-2">
-        <i class="fa fa-eye mr-1"></i><label class="title mr-4">{{summary.title}}的任务</label>
+        <i class="fa fa-eye mr-1"></i><label class="title mr-2">{{summary.title}}的任务</label>
 
-        <div class="btn-link pull-right mr-2" onclick="return switch_viewmode();">
-            <i class="fa fa-toggle-on mr-1"></i>切换为【{{session.gantt_mode and '看板' or '甘特图'}}】模式
+        <div style="font-size: 0.8em; display: inline;">
+            <label class="mr-1">按指派人员筛选</label>
+        
+            <select class="d-inline form-controll mr-4" onchange="return filter_task_by_assigned(this);">
+                <option value="-1">-- 全部 --</option>
+                {% for name, id in pairs(all_assigned) do %}
+                <option value="{{id}}">{{name}}</option>
+                {% end %}
+            </select> 
+        </div>
+        
+        <div class="pull-right mr-2">
+            <div class="d-inline btn-link" onclick="return switch_viewmode();">
+                {% if session.gantt_mode then %}
+                <i class="fa fa-id-badge mr-1"></i>看板
+                {% else %}
+                <i class="fa fa-sliders mr-1"></i>甘特图
+                {% end %}
+            </div>
         </div>
     </div>
 
