--- a/frontend/src/components/basic.css
+++ b/frontend/src/components/basic.css
@@ -152,7 +152,7 @@ body{font: 14px Lucida Grande,Lucida Sans Unicode,Tahoma,Helvetica,Arial,Microso
 
 /* Dividers */
 .divider-v{box-sizing: border-box; display: inline-block; width: 1px; height: .9em; margin: 0 8px; vertical-align: middle; color: rgba(0,0,0,.65); font-size: 14px; line-height: 1.5; background: #e8e8e8}
-.divider-h{box-sizing: border-box; display: block; clear: both; width: 100%; min-width: 100%; height: 1px; background-color: rgb(204,204,204)}
+.divider-h{box-sizing: border-box; display: block; clear: both; width: 100%; min-width: 100%; height: 0; border-bottom: 1px solid rgb(204,204,204)}
 
 /* Others */
 .hide{display: none}
