--- a/team/assets/src/components/input.css
+++ b/team/assets/src/components/input.css
@@ -1,3 +1,5 @@
+input:-internal-autofill-selected, textarea:-internal-autofill-selected, textarea:-internal-autofill-selected{box-shadow: 0 0 0px 1000px white inset}
+
 .input{display: inline-block; width: 100%; height: auto; border-width: 1px; border-style: solid; border-color: #d2d2d2; background-color: #fff; box-sizing: border-box}
 .input>input, .input>textarea{display: block; width: 100%; height: 100%; min-height: 26px; padding: 0 4px; margin: 0; color: #5c5c5c; border: none; box-sizing: border-box}
 .input>textarea{resize: none}
