--- a/team/assets/src/components/markdown.css
+++ b/team/assets/src/components/markdown.css
@@ -1,7 +1,13 @@
 .markdown-viewer{overflow: auto; background: rgb(245, 245, 245); border: 1px solid #d2d2d2; border-left: none; box-sizing: border-box; padding: 4px}
 
 .markdown{color: #24292e; font-size: 16px}
-.markdown h1, .markdown h2, .markdown h3, .markdown h4, .markdown h5, .markdown h6{margin-top: 16px; margin-bottom: 8px}
+.markdown h1, .markdown h2, .markdown h3, .markdown h4, .markdown h5, .markdown h6{color: #4e4e4e; margin-top: 24px; margin-bottom: 12px; font-weight: 500}
+.markdown h1{font-size: 32px}
+.markdown h2{font-size: 24px}
+.markdown h3{font-size: 20px}
+.markdown h4{font-size: 16px}
+.markdown h5{font-size: 14px}
+.markdown h6{font-size: 12px}
 .markdown .code>h3{margin: 0}
 
 .markdown .task{list-style-type: none}
